Fix wrapping items for hover

--- a/style/webact.css
+++ b/style/webact.css
@@ -18,7 +18,7 @@ body {
 }
 
 .span-url{
-    width: 320px;
+    width: 312px;
     text-decoration: none;
     color: rgb(0, 0, 0);
     font-size: 13px;
